# airflow-yandex-api

./: README.md  docker-compose.yaml  pyproject.toml  test.py
dags/: conns.py  dag.py  tasks.py  utils.py
dags/sql/: update-dimension-tables.sql  update-fact-tables.sql
init-database/: exceptions.py  funcs.py  init.py
init-database/sql/: init.sql  update-datamarts.sql
